--- a/src/main/webapp/view/agenda.html
+++ b/src/main/webapp/view/agenda.html
@@ -9,39 +9,39 @@
 <!-- Main content -->
 <section class="content">
     <div class="row">
-        <div class="col-md-2">
-            <div class="box box-solid">
-                <div class="box-header with-border">
-                    <h3 class="box-title">Profissional</h3>
-                    <div class="box-tools">
-                        <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                    </div>
-                </div>
-                <div class="box-body no-padding">
-                    <ul class="nav nav-stacked teste-menu" >
-                        <li ng-repeat="resource in resources"><a href="javascript:void(true)"><i class="fa fa-user margin-r-5"></i> {{resource.title}} </a></li>
-                    </ul>
-                </div><!-- /.box-body -->
-            </div><!-- /. box -->
-            <div class="box box-solid">
-                <div class="box-header with-border">
-                    <h3 class="box-title">Status</h3>
-                    <div class="box-tools">
-                        <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                    </div>
-                </div>
-                <div class="box-body no-padding">
-                    <ul class="nav nav-stacked teste-menu">
-                        <li><a href="javascript:void(true)"><i class="fa fa-circle-o text-green margin-r-5"></i> Reservado</a></li>
-                        <li><a href="javascript:void(true)"><i class="fa fa-circle-o text-yellow margin-r-5"></i> Em Atendimento</a></li>
-                        <li><a href="javascript:void(true)"><i class="fa fa-circle-o text-light-blue margin-r-5"></i> Finalizado</a></li>
-                        <li><a href="javascript:void(true)"><i class="fa fa-circle-o text-gray margin-r-5"></i> Não Compareceu</a></li>
-                        <li><a href="javascript:void(true)"><i class="fa fa-circle-o text-red margin-r-5"></i> Cancelado</a></li>
-                    </ul>
-                </div><!-- /.box-body -->
-            </div><!-- /.box -->
-        </div><!-- /.col -->
-        <div class="col-md-10">
+        <!--<div class="col-md-2">-->
+            <!--<div class="box box-solid">-->
+                <!--<div class="box-header with-border">-->
+                    <!--<h3 class="box-title">Profissional</h3>-->
+                    <!--<div class="box-tools">-->
+                        <!--<button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="box-body no-padding">-->
+                    <!--<ul class="nav nav-stacked teste-menu" >-->
+                        <!--<li ng-repeat="resource in resources"><a href="javascript:void(true)"><i class="fa fa-user margin-r-5"></i> {{resource.title}} </a></li>-->
+                    <!--</ul>-->
+                <!--</div>&lt;!&ndash; /.box-body &ndash;&gt;-->
+            <!--</div>&lt;!&ndash; /. box &ndash;&gt;-->
+            <!--<div class="box box-solid">-->
+                <!--<div class="box-header with-border">-->
+                    <!--<h3 class="box-title">Status</h3>-->
+                    <!--<div class="box-tools">-->
+                        <!--<button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="box-body no-padding">-->
+                    <!--<ul class="nav nav-stacked teste-menu">-->
+                        <!--<li><a href="javascript:void(true)"><i class="fa fa-circle-o text-green margin-r-5"></i> Reservado</a></li>-->
+                        <!--<li><a href="javascript:void(true)"><i class="fa fa-circle-o text-yellow margin-r-5"></i> Em Atendimento</a></li>-->
+                        <!--<li><a href="javascript:void(true)"><i class="fa fa-circle-o text-light-blue margin-r-5"></i> Finalizado</a></li>-->
+                        <!--<li><a href="javascript:void(true)"><i class="fa fa-circle-o text-red margin-r-5"></i> Cancelado</a></li>-->
+                        <!--<li><a href="javascript:void(true)"><i class="fa fa-circle-o text-gray margin-r-5"></i> Não Compareceu</a></li>-->
+                    <!--</ul>-->
+                <!--</div>&lt;!&ndash; /.box-body &ndash;&gt;-->
+            <!--</div>&lt;!&ndash; /.box &ndash;&gt;-->
+        <!--</div>&lt;!&ndash; /.col &ndash;&gt;-->
+        <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-body no-padding">
                     <div style="padding: 10px">
